Sun Jun  6 20:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSEvent.h: Added new event types and masks and tidied.
	* Headers/AppKit/NSGraphicsContext.h: Added event queue ivar
	* Source/NSEvent.m: Rewrite to add new event types, optimise, and
	generate all the exceptions it should.
	* Source/NSGraphicsContext.m: Incorporate event handling code from
	backend libraries.

Sun Jun  6  9:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScrollView.m: tidyup
	* Source/NSScroller.m: Permit use of alt key to slow down scrolling.

Sat Jun  5 21:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added image updates by jagapen@whitewater.chem.wisc.edu -
	* Source/NSImageView.m: Implemented
	* Source/NSImageCell.m: New class
	* Source/GNUmakefile: Added NSImageCell
	* Headers/AppKit/NSImageCell.h: New header
	* Headers/AppKit/AppKit.h: Added NSImageCell

Sat Jun  5  7:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: Some minor drawing optimisations.

1999-06-03  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m (GSCurrentContext): Insert = (patch
	from John BEPPU <beppu@taurus.oac.uci.edu>).

Thu Jun  3  9:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWorkspace.m: Updated app launching code to supply info
	to open files if necessary.
	Fixed bug in getting name of icons for file.

Wed Jun  2 22:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSButtonCell.m: ([sendAction:to:]) should work with nil target.
	* Source/NSCell.m: ([sendAction:to:]) should work with nil target.
	* Source/NSControl.m: ([sendAction:to:]) should work with nil target.

Wed Jun  2 20:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: Send performKeyEquivalent messages.
	* Source/NSWindow.m: Send performKeyEquivalent messages.
	* Source/NSView.m: Send performKeyEquivalent messages.