@@ -662,13 +662,14 @@ static Class	responderClass;
   screenPoint.x = frame.origin.x + basePoint.x;
   screenPoint.y = frame.origin.y + basePoint.y;
 
-  return screenPoint;
+  return [GSCurrentContext() convertBaseToScreen: screenPoint];
 }
 
 - (NSPoint) convertScreenToBase: (NSPoint)screenPoint
 {
   NSPoint basePoint;
 
+  screenPoint = [GSCurrentContext() convertScreenToBase: screenPoint]
   basePoint.x = screenPoint.x - frame.origin.x;
   basePoint.y = screenPoint.y - frame.origin.y;
 
